--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -35,7 +35,7 @@ li {
 
 #left-col {
     height: 100%;
-    width: 25%;
+    width: 15%;
     position: fixed;
     margin: 0;
     background-color: #080808;
@@ -45,4 +45,45 @@ li {
 
 #location-list {
     color: white;
+}
+
+@media screen and (max-width: 950px) {
+    #left-col {
+        width: 50%;
+    }
+
+    #location-list ul {
+        font-size: 30px;
+    }
+}
+
+@media screen and (orientation: portrait) {
+    #left-col {
+        width: 60%;
+        opacity: .75;
+    }
+
+    #location-list ul {
+        font-size: 40px;
+    }
+
+    #hamburger-collapse {
+        font-size: 40px;
+    }
+
+    .top-bar {
+        height: 60px;
+    }
+
+    .info-header {
+        font-size: 40px;
+    }
+
+    .info-p {
+        font-size: 30px;
+    }
+
+    .info-hyperlink {
+        font-size: 25px;
+    }
 }
